2010-03-20  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark Rowe.

        Fix a bunch of HTML5 validation errors on various pages.
        https://bugs.webkit.org/show_bug.cgi?id=36409

        * building/build.html:
        * building/checkout.html:
        * building/debug.html:
        * building/run.html:
        * building/tools.html:
        * coding/coding-style.html:
        * coding/contributing.html:
        * coding/major-objects.html:
        * css/main.css:
        (.asciiart):
        * demos/index.html:
        * header.inc:
        * projects/compat/index.html:
        * projects/css/index.html:
        * projects/documentation/index.html:
        * projects/goals.html:
        * projects/index.html:
        * projects/mathml/index.html:
        * quality/bugpriorities.html:
        * quality/bugwriting.html:
        * quality/crashlogs.html:
        * quality/lifecycle.html:
        * quality/testing.html:
        * quality/testwriting.html:

2010-03-19  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark Rowe.

        webkit.org should use the HTML5 doctype
        https://bugs.webkit.org/show_bug.cgi?id=36407

        * header.inc:
        * misc/drosera/index.html:
        * perf/slickspeed/system/index.php:
        * perf/slickspeed/system/template.php:
        * specs/index.html:

2010-03-19  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark Rowe.

        http://webkit.org/ has an HTML5 validation error
        https://bugs.webkit.org/show_bug.cgi?id=36406

        * nav.inc:

2010-03-15  Maciej Stachowiak  <mjs@apple.com>

        Tweak canvas perf demo.

        * demos/canvas-perf/canvas.html:

2010-03-14  Maciej Stachowiak  <mjs@apple.com>

        Added canvas perf demo for whatwg.

        * demos/canvas-perf: Added.
        * demos/canvas-perf/canvas.html: Added.
        * demos/canvas-perf/kraken.jpg: Added.

2010-03-09  Adam Roben  <aroben@apple.com>
