@@ -3,7 +3,7 @@
 add_filter('comment_text', 'popuplinks');
 foreach ($posts as $post) { start_wp();
 ?>
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
 <head>
      <title><?php echo get_settings('blogname'); ?> - Comments on <?php the_title(); ?></title>
