@@ -2,6 +2,17 @@
 
         Reviewed by Mark Rowe.
 
+        WebKit blog should be valid HTML5
+        https://bugs.webkit.org/show_bug.cgi?id=36410
+
+        * blog/wp-content/themes/webkit/comments-popup.php:
+        * blog/wp-content/themes/webkit/footer.php:
+        * blog/wp-content/themes/webkit/header.php:
+
+2010-03-20  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Mark Rowe.
+
         Fix a bunch of HTML5 validation errors on various pages.
         https://bugs.webkit.org/show_bug.cgi?id=36409
 
